docs/samples/actual-20251109T213754/iptables_host_filter_before_peer.txt
-P INPUT ACCEPT
-P FORWARD DROP
-P OUTPUT ACCEPT
-N DOCKER
-N DOCKER-BRIDGE
-N DOCKER-CT
-N DOCKER-FORWARD
-N DOCKER-ISOLATION-STAGE-1
-N DOCKER-ISOLATION-STAGE-2
-N DOCKER-USER
-N vpc-stage4-a
-A FORWARD -i br-stage4-a -m comment --comment "vpcctl:stage4-a:jump" -j vpc-stage4-a
-A FORWARD -i br-stage4-a -o eth0 -m comment --comment "vpcctl:stage4-a:fwd-out" -j ACCEPT
-A FORWARD -i eth0 -o br-stage4-a -m state --state RELATED,ESTABLISHED -m comment --comment "vpcctl:stage4-a:fwd-in" -j ACCEPT
-A DOCKER ! -i br-ce2aec6a9573 -o br-ce2aec6a9573 -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o br-ce2aec6a9573 -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o br-ce2aec6a9573 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-ISOLATION-STAGE-1
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-ce2aec6a9573 -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i br-ce2aec6a9573 ! -o br-ce2aec6a9573 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-ce2aec6a9573 -j DROP
-A vpc-stage4-a -s 10.40.0.0/16 -d 10.40.0.0/16 -m comment --comment "vpcctl:stage4-a:intra" -j ACCEPT
