docs/samples/actual-20251109T213754/iptables_host_nat_before_peer.txt
-P PREROUTING ACCEPT
-P INPUT ACCEPT
-P OUTPUT ACCEPT
-P POSTROUTING ACCEPT
-N DOCKER
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-ce2aec6a9573 -j MASQUERADE
-A POSTROUTING -s 10.11.0.0/16 -o enX0 -m comment --comment "vpcctl:demo:nat" -j MASQUERADE
-A POSTROUTING -s 10.40.0.0/16 -o eth0 -m comment --comment "vpcctl:stage4-a:nat" -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-ce2aec6a9573 -j RETURN
